yal2jvm.jjt
options
{
  LOOKAHEAD=1;
  MULTI=true;
  TRACK_TOKENS=true;
}

PARSER_BEGIN(yal2jvm)
// código Java que invoca o parser
import java.io.*;
import java.util.*;

public class yal2jvm {
  private static int error_counter = 0;


  public static void generator(String fileName,SimpleNode root, SymbolTable st){
    String file = fileName.substring(0,fileName.length()-4);
      try {
    BufferedWriter s = new BufferedWriter(new FileWriter(file + ".j"));
    ((ASTModule)root).process(s,st);
    //fim
    s.write(".method static public <clinit>()V\n");
    s.write(".limit stack 0\n");
    s.write(".limit locals 0\n");
    s.write("return\n");
    s.write(".end method\n");
    s.close();
  }
    catch (IOException e)
    {
      System.out.println("Exception ");

    }

  }
 public static void main(String args[]) throws ParseException, FileNotFoundException {

BufferedReader  br;
 yal2jvm parser;
   try{
     File inFile = null;
  if (0 < args.length) {
     inFile = new File(args[0]);
  } else {
     System.err.println("Invalid arguments count:" + args.length);
  }

    br = new BufferedReader(new FileReader(inFile));
    parser= new yal2jvm(br);

     SimpleNode root = parser.Module();
     root.dump("");
     SymbolTable st=root.getSymbolTable();
     generator(args[0],root,st);
     root.semanticAnalysis(st);




  }
  catch (FileNotFoundException e) {
    System.out.println(e);
}
  System.out.println("Errors: " + error_counter);
 }
}
PARSER_END(yal2jvm)


<DEFAULT> SKIP : {
" "
| "\t"
| "\n"
| "\r"
| <"//" (~["\n","\r"])* ("\n" | "\r" | "\r\n")>
| <"/*" (~["*"])* "*" ("*" | ~["*","/"] (~["*"])* "*")* "/">
}

/* reserved words */
<DEFAULT> TOKEN : {
<RELA_OP: ">" | "<" | "<=" | ">=" | "==" | "!=">
| <ADDSUB_OP: "+" | "-">
| <ARITH_OP: "*" | "/" | "<<" | ">>" | ">>>">
| <BITWISE_OP: "&" | "|" | "^">
| <NOT_OP: "!">
| <WHILE: "while">
| <IF: "if">
| <ELSE: "else">
| <ASSIGN: "=">
| <ASPA: "\"">
| <LPAR: "(">
| <RPAR: ")">
| <VIRG: ",">
| <PVIRG: ";">
| <LCHAVETA: "{">
| <RCHAVETA: "}">
| <FUNCTION: "function">
| <MODULE: "module">
| <SIZE: "size">
}

<DEFAULT> TOKEN : {
<INTEGER: (<DIGIT>)+>
| <ID: <LETTER> (<LETTER> | <DIGIT>)*>
| <#LETTER: ["$","A"-"Z","_","a"-"z"]>
| <#DIGIT: ["0"-"9"]>
| <STRING: "\"" (["a"-"z","A"-"Z","0"-"9",":"," ","="])+ "\"">

}
SimpleNode Module() : {Token t;}
{
  try{
    <MODULE>t=<ID> {jjtThis.setName(t.image);jjtThis.setModule(t.image);}<LCHAVETA> ( Declaration() )* ( Function() )* <RCHAVETA>
  }catch(ParseException e){
    String msg="Error in module";
    error_skipto(RCHAVETA,msg);
  }
  {
    return jjtThis;
  }
}

void Declaration() : {Token t1, t2; int i;}
{
  try{
    ( i=Element(){jjtThis.setElementId(i);jjtThis.setType("I");}) ( <ASSIGN> ( ( "[" ArraySize() "]"){jjtThis.setType("[I");} | ( t2=<ADDSUB_OP>{jjtThis.setSignal(t2.image);} )? t1=<INTEGER>{jjtThis.setElementValue(t1.image);} ) )? <PVIRG>
  }catch(ParseException e){
    String msg="Error declaring module variables";
    error_skipto(PVIRG,msg);
  }
}




void Function() : {Token t,t1;}
{
  try{
    <FUNCTION> t=<ID>
      {jjtThis.setReturn("void");jjtThis.setName(t.image);jjtThis.setReturn("void");jjtThis.setReturnType("V");}
      (
      ("[" "]"{jjtThis.setReturnType("[I");})? <ASSIGN> t1=<ID>{jjtThis.setReturn(t.image);jjtThis.setName(t1.image);String temp=jjtThis.getReturnType(); if(temp==null || temp=="V")jjtThis.setReturnType("I");}
      )?
      <LPAR>
      ( Varlist() )?
  <RPAR>
  }catch(ParseException e){
      String msg="Error in function Varlist or in the return variable";
      error_skipto(RPAR,msg);
    }
     try{
      < LCHAVETA >
      Stmtlst()
      < RCHAVETA >
    }catch(ParseException ex){
        String msg="Error in function Stmtlst, there is an error in the function body";
        error_skipto(RCHAVETA,msg);
      }

}

void Varlist() : {}
{
      ( Element() )( <VIRG> ( Element()) )*
}

int Element() : {Token t;}
{
  t=<ID>{jjtThis.setName(t.image);jjtThis.setType("I");} ("[" "]"{jjtThis.setType("[I");})?
  {return jjtThis.id;}
}


void Stmtlst() : {}
{
( Stmt() )*
}

void Stmt() : {}
{
  While() | If() | try{ LOOKAHEAD(3) Assign() | Call() <PVIRG>}
  catch(ParseException e){
    String msg="Error in one of the statements";
    error_skipto(PVIRG,msg);
  }
}

void Assign() : {}
{
  try{
    Lhs() <ASSIGN>
  }catch(ParseException e){

    String msg="Error found in left side of the assign!\n";
    error_skipto(ASSIGN,msg);
  }
  try{
    Rhs() <PVIRG>
  }catch(ParseException e){
    String msg="Error found in right side of the assign!\n";
    error_skipto(PVIRG,msg);
  }

}

void Lhs() : {}
{
  AccessElement()
}

void Rhs() : {Token t;}
{
  ( Term() ( ( t=<ARITH_OP> | t=<BITWISE_OP> | t=<ADDSUB_OP> ){jjtThis.setOperation(t.image);} Term() )? )| "[" ArraySize() "]"
}

void ArraySize() : {Token t;}
{
(t=<ID>ScalarAccess(){jjtThis.setName(t.image);jjtThis.setType("ID");} ) | (t=<INTEGER>{jjtThis.setValue(t.image);jjtThis.setType("I");})
}

void Term() : {Token t1,t2;}
{
  ( t2=<ADDSUB_OP>{jjtThis.setSignal(t2.image);} )? ( t1=<INTEGER>{jjtThis.setElementValue(t1.image);} | LOOKAHEAD(3)Call() | AccessElement())
}

void Exprtest() : {Token t;}
{
  try{
  <LPAR> Lhs() t=<RELA_OP>{jjtThis.setOperation(t.image);} Rhs() <RPAR>
}catch(ParseException e){
  String msg="Error in Exprtest";
  error_skipto(RPAR,msg);
}
}

void While() : {}
{
  try {
    <WHILE> Exprtest() <LCHAVETA>
  }
  catch (ParseException e) {
    String msg="Error in while expression!\n";
    error_skipto(LCHAVETA,msg);
  }
  try {
    Stmtlst() <RCHAVETA>
  }
  catch (ParseException e) {
    String msg="Error in while body";
    error_skipto(RCHAVETA,msg);
  }
}

void If() : {}
{
  try{
      <IF> Exprtest() <LCHAVETA>
  }catch(ParseException e){
    String msg="Error in if condition!\n";
    error_skipto(LCHAVETA,msg);
  }try{
    Stmtlst() <RCHAVETA>
  }catch(ParseException e){
    String msg="Error in if action!\n";
    error_skipto(RCHAVETA,msg);
  }
  (try{
     <ELSE> <LCHAVETA>Stmtlst() <RCHAVETA>
  }catch(ParseException e){
    String msg="Error in else statement!\n";
    error_skipto(RCHAVETA,msg);
  })?


}

void Call() : {Token t1,t2;}
{
t1=<ID> {jjtThis.setName(t1.image);}( "." t2=<ID> {jjtThis.setModule(t1.image);jjtThis.setName(t2.image);})? <LPAR> ( ArgumentList() )? <RPAR>
}

void ArgumentList() : {}
{
Argument() ( <VIRG> Argument() )*
}

void Argument() : {Token t;}
{
( t=<ID> {jjtThis.setName(t.image);jjtThis.setType("ID");} | t=<STRING> {jjtThis.set_str_arg(t.image);jjtThis.setType("S");}| t=<INTEGER> {jjtThis.set_int_arg(t.image);jjtThis.setType("I");})
}

void AccessElement() : {Token t;}
  {
    t=<ID> {jjtThis.setName(t.image);}(ArrayAccess() | ScalarAccess())
  }

void ArrayAccess() : {}
{
"[" Index() "]"
}

void ScalarAccess() : {}
{
 ( "." <SIZE>{jjtThis.setSize("T");} )?
}

void Index() : {Token t;}
{
(  t=<ID> {jjtThis.setName(t.image);})| (t=<INTEGER>{jjtThis.setIndex(t.image);})
}

JAVACODE
public void error_skipto(int kind,String error_msg)#void {
  ParseException e = generateParseException();  // generate the exception object.
  error_counter++;
  if(error_counter <= 10){
    System.out.println(error_msg);
     // print the error message
     if(kind!=-798)
    System.out.println(e);
  }
  if(kind!=-798){
  Token t;
  do {
    t = getNextToken();
  } while (t.kind != kind);
}
}
